--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
   left: 72.25%;
   top: 35.9%;
   z-index: 13;
+  pointer-events: none;
 }
 
 #antenna-stick {
@@ -189,10 +190,9 @@ body {
   top: 54%;
   left: 70%;
   z-index: 13;
-  cursor: grab;
   transform-origin: 52.5% 205%;
   transition: transform 80ms linear;
-  touch-action: manipulation;
+  pointer-events: none;
 }
 
 #small-knob {
@@ -202,7 +202,7 @@ body {
   left: 68.74%;
   z-index: 13;
   transform-origin: 50.63% 25%;
-  touch-action: manipulation;
+  pointer-events: none;
 }
 
 .btn {
